<resources>
    <string name="app_name">MineSweeper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy_button_text">Facile</string>
    <string name="medium_button_text">Moyen</string>
    <string name="hard_button_text">Difficile</string>
    <string name="list_scores">Top 10 des scores</string>
    <string name="tryAgain">Try Again</string>
  <string name="enregistrer">enregistrer</string>
</resources>
