<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.usrlocal.minesweeper.MenuActivity">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Contre la montre? (à activer ci-dessous)"/>

    <Switch
      android:id="@+id/mode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
        android:id="@+id/easy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/easy_button_text" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/medium_button_text" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hard_button_text" />

</LinearLayout>
