<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.usrlocal.minesweeper.MenuActivity">

    <TextView
      android:id="@+id/endMessage"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:text="Terminé !"
      android:textSize="20dp"
      android:textStyle="bold"
      android:padding="5dp"
      android:gravity="center"/>

    <TextView
      android:id="@+id/myScore"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:text="Victoire !"
      android:textSize="15dp"
      android:textStyle="bold"
      android:padding="5dp"
      android:gravity="center"/>

    <TextView
      android:id="@+id/bestScoreLabel"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:text="Meilleur score :"
      android:textSize="20dp"
      android:textStyle="bold"
      android:padding="5dp"
      android:gravity="center"/>

    <TextView
      android:id="@+id/bestScoreValue"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="Défaite"
      android:textSize="15dp"
      android:textStyle="bold"
      android:padding="5dp"
      android:gravity="center"/>

    <EditText
      android:id="@+id/pseudoRegister"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:hint="Pseudo"
      android:gravity="center"/>

    <Button
      android:id="@+id/register"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/enregistrer" />

    <Button
        android:id="@+id/BestScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/list_scores" />

    <Button
      android:id="@+id/tryAgain"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/tryAgain" />


</LinearLayout>
